Fix button spacing. Add text

--- a/assets/css/argon-dashboard.css
+++ b/assets/css/argon-dashboard.css
@@ -21459,6 +21459,7 @@ fieldset:disabled .btn {
 
 .input-group {
   border-radius: 0.5rem;
+  padding: 10px;
 }
 
 .input-group,
